[SE-0258] Properly contextualize closures in property wrapper initialization.

Fixes SR-11061 / rdar://problem/52593304 / rdar://problem/52220881.